kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemption
  namespace: redemption
  labels:
    app: redemption
spec:
  selector:
    app: redemption
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
